add a little test verison to AMRC mobile site

--- a/OwnProjectsAndTests/hjemmesideTilAgnes/index.html
+++ b/OwnProjectsAndTests/hjemmesideTilAgnes/index.html
@@ -19,14 +19,14 @@
                 <i class="fa-regular fa-paper-plane"></i>
                 <p>Kontakt</p>
             </span>
-            <span id="testId1">
+            <span id="kontaktSpanBox">
                 <span>
                     <i class="fa-solid fa-envelope"></i>
                     <p>Mail: <a href="mailto:agneschristens@yahoo.dk">agneschristens@yahoo.dk</a></p>
                 </span>
                 <span>
                     <i class="fa-solid fa-phone"></i>
-                    <p>Telefon: <a href="tel:+4524891780">+4524891780</a></p>
+                    <p>Telefon: <a href="tel:+4524891780">+45 24 89 17 80</a></p>
                 </span>
             </span>
         </div>
@@ -35,11 +35,16 @@
                 <i class="fa-solid fa-film"></i>
                 <p>Showreel</p>
             </span>
-            <span id="testId2">
-                <video width="640" height="360" controls>
+            <span id="showreelBoxIndhold">
+                <!-- 
+                <video width="100%" controls>
                     <source src="https://www.youtube.com/watch?v=JPqxgGPUwmw" type="video/mp4">
                     Your browser does not support the video tag.
                   </video>
+                  -->
+                  <iframe width="560" height="315" src="https://www.youtube.com/embed/nKIu9yen5nc?si=f4sCCBugxsOifack" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+                    
+                  </iframe>
                 <p></p>
             </span>
         </div>
@@ -48,7 +53,7 @@
                 <i class="fa-solid fa-earth-europe"></i>
                 <p>Nyt fra mig</p>
             </span>
-            <span id="testId3">
+            <span id="nytFraMigBoxIndhold">
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi.Aenean vulputate eleifend tellus.Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus.Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum.</p>
             </span>
         </div>
@@ -57,7 +62,7 @@
                 <i class="fa-regular fa-id-card"></i>
                 <p>Portfolie</p>
             </span>
-            <span id="testId4">
+            <span id="portfolieBoksIndhold">
                 <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit<a href="resources/PDF files/Min portfolie.pdf"> PDF</a></p>
             </span>
         </div>
@@ -66,7 +71,7 @@
                 <i class="fa-solid fa-camera"></i>
                 <p>Fotos</p>
             </span>
-            <span id="testId5">
+            <span id="fotosBoksIndhold">
                 <p>test</p>
                 <span>
                     <a href=""><img src="./resources/images/sødHundBillede.jpg" alt="fejl med billede"></a>
