try to resize some text

--- a/OwnProjectsAndTests/hjemmesideTilAgnes/index.html
+++ b/OwnProjectsAndTests/hjemmesideTilAgnes/index.html
@@ -26,6 +26,7 @@
             </span>
             <span id="kontaktSpanBox">
                 <span>
+                    <!--
                     <i class="fa-solid fa-envelope"></i>
                     <p>Mail: <a href="mailto:agneschristens@yahoo.dk">agneschristens@yahoo.dk</a></p>
                 </span>
@@ -33,6 +34,16 @@
                     <i class="fa-solid fa-phone"></i>
                     <p>Telefon: <a href="tel:+4524891780">+45 24 89 17 80</a></p>
                 </span>
+                -->
+                <i class="fa-solid fa-envelope"></i>
+                <p>Mail:</p>
+                <p><a href="mailto:agneschristens@yahoo.dk">agneschristens@yahoo.dk</a></p>
+            </span>
+            <span>
+                <i class="fa-solid fa-phone"></i>
+                <p>Telefon: </p>
+                <p><a href="tel:+4524891780">+45 24 89 17 80</a></p>
+            </span>
             </span>
         </div>
 
@@ -63,7 +74,7 @@
                 <p>Nyt fra mig</p>
             </span>
             <span id="nytFraMigBoxIndhold">
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi.Aenean vulputate eleifend tellus.Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus.Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum.</p>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem.</p>
             </span>
         </div>
 
