try to add views for mobile phone

--- a/OwnProjectsAndTests/hjemmesideTilAgnes/index.html
+++ b/OwnProjectsAndTests/hjemmesideTilAgnes/index.html
@@ -35,14 +35,18 @@
                     <p>Telefon: <a href="tel:+4524891780">+45 24 89 17 80</a></p>
                 </span>
                 -->
-                <i class="fa-solid fa-envelope"></i>
-                <p>Mail:</p>
-                <p><a href="mailto:agneschristens@yahoo.dk">agneschristens@yahoo.dk</a></p>
+                <span>
+                    <i class="fa-solid fa-envelope"></i>
+                    <p>Mail:</p>
+                </span>
+                    <p><a href="mailto:agneschristens@yahoo.dk">agneschristens@yahoo.dk</a></p>
             </span>
             <span>
-                <i class="fa-solid fa-phone"></i>
-                <p>Telefon: </p>
-                <p><a href="tel:+4524891780">+45 24 89 17 80</a></p>
+                <span>
+                    <i class="fa-solid fa-phone"></i>
+                    <p>Telefon: </p>
+                </span>
+                <p><a href="tel:+4524891780" id="phoneText">+45 24 89 17 80</a></p>
             </span>
             </span>
         </div>
