try to add last media queries to website for AMRC

--- a/OwnProjectsAndTests/hjemmesideTilAgnes/index.html
+++ b/OwnProjectsAndTests/hjemmesideTilAgnes/index.html
@@ -122,7 +122,7 @@
                 <p>Fotos</p>
             </span>
             <span id="fotosBoksIndhold">
-                <p>test</p>
+                <p>Billeder af mig</p>
                 <span class="row">
                     <a class="column">
                         <img src="resources/images/img_lights.jpg" onclick="openModal();currentSlide(1)" class="hover-shadow">
