finish little touch ups on v2 test

--- a/OwnProjectsAndTests/hjemmesideTilAgnesv2/index.html
+++ b/OwnProjectsAndTests/hjemmesideTilAgnesv2/index.html
@@ -20,7 +20,7 @@
     <!-- Kontakt box -->
     <div class="divMedTekstBokse">
         <div class="divMedTekstBoks" onclick="testFunction1()">
-            <span>
+            <span id="contactSpanBox">
                 <span class="buttonTextContainer">
                     <i class="fa-regular fa-paper-plane"></i>
                     <p>Kontakt</p>
