make small changes to amrc site

--- a/OwnProjectsAndTests/hjemmesideTilAmrc/index.html
+++ b/OwnProjectsAndTests/hjemmesideTilAmrc/index.html
@@ -96,14 +96,16 @@
             </div>
 
         
-        <div class="divMedTekstBoks" id="hvemErJegDiv">
+        <div class="divMedTekstBoks">
             <h3 class="blueHeader">Hvem er jeg?</h3>
+            <div id="hvemErJegDiv">
             <!-- alternativt skriv om mig. eller noget som mit univers eller noget tilsvarende.-->
             <p>Jeg er en ung skuespiller udannet fra talentskolen i Næstved. 
                 Efter jeg afsluttede min uddannelse, tog jeg mod Sverige for at studere. 
                 Jeg gik på Nordiska Högskola Teater. 
                 Det var spændende at spille på et andet sprog end sit modersmål og helt klart noget jeg vil fortsætte med.</p>
             <img src="resources/images/Aspect_ratio_-_16x9.svg.png" alt="" id="portrait2">
+            </div>
         </div>
         <div class="divMedTekstBoks" id="kontaktDiv">
             <h3 id="blackHeader">Kontakt</h3>
