add drafts for phone for amrc site

--- a/OwnProjectsAndTests/hjemmesideTilAmrc/index.html
+++ b/OwnProjectsAndTests/hjemmesideTilAmrc/index.html
@@ -21,7 +21,9 @@
                     <h3>Agnes</h3>
                     <h3>Marie</h3>
                 </div>
-                <img src="resources/images/portrait.jpg" alt="Billede af mig" id="portrait1">
+                <div class="parentTest">
+                    <img src="resources/images/portrait.jpg" alt="Billede af mig" id="portrait1">
+                </div>
             </div>
             <p>Agneschristens@yahoo.dk</p>
         </div>
