--- a/OwnProjectsAndTests/hjemmesideTilAmrc/index.html
+++ b/OwnProjectsAndTests/hjemmesideTilAmrc/index.html
@@ -9,7 +9,21 @@
     <script src="https://kit.fontawesome.com/e5e3a9297d.js" crossorigin="anonymous"></script>
     <script src="resources/javascript/script.js"></script>
 </head>
-<body>
+<body id="hjem">
+    <div id="myNav" class="overlay">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <div class="overlay-content">
+          <a href="#hjem">Hjem</a>
+          <a href="#showReelBoks">Showreel</a>
+          <a href="#favoritProjekter">Favorit projekter</a>
+          <a href="#fotosBoks">Fotos</a>
+          <a href="#hvemErJegBoks">Hvem er jeg?</a>
+          <a href="#kontaktDiv">Kontakt</a>
+        </div>
+    </div>
+    <span style="font-size:60px;cursor:pointer" onclick="openNav()" class="menuButton">&#9776;</span>
+    <div class="menuDivTest"></div>
+    <script src="resources/javascript/menu.js"></script>
     <div class="divMedTekstBokse">
         <div class="divMedTekstBoks" id="title">
             <h1>Skuespiller og Sanger</h1>
@@ -27,7 +41,7 @@
             </div>
             <p>Agneschristens@yahoo.dk</p>
         </div>
-        <div class="divMedTekstBoks">
+        <div class="divMedTekstBoks" id="showReelBoks">
             <h3 class="blueHeader" id="showreelH3">Showreel</h3>
             <video width="320" height="240" controls>
                 <source src="resources/videos/SampleVideo_1280x720_1mb.mp4" type="video/mp4">
@@ -61,7 +75,7 @@
             </ul>
             <a href="resources/PDF files/pdf-test.pdf" class="button">Download fulde CV klick her</a>
         </div>
-            <div class="divMedTekstBoks" onclick="testFunction5()">
+            <div class="divMedTekstBoks" onclick="testFunction5()" id="fotosBoks">
                 <h3 class="blueHeader">Fotos</h3>
                 <span id="fotosBoksIndhold">
                     <p>Billeder af mig</p>
@@ -98,7 +112,7 @@
             </div>
 
         
-        <div class="divMedTekstBoks">
+        <div class="divMedTekstBoks" id="hvemErJegBoks">
             <h3 class="blueHeader">Hvem er jeg?</h3>
             <div id="hvemErJegDiv">
             <!-- alternativt skriv om mig. eller noget som mit univers eller noget tilsvarende.-->
