try to add second draft to amrc

--- a/OwnProjectsAndTests/hjemmesideTilAmrc/index.html
+++ b/OwnProjectsAndTests/hjemmesideTilAmrc/index.html
@@ -13,10 +13,10 @@
     <div id="myNav" class="overlay">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <div class="overlay-content">
-          <a href="#hjem">Hjem</a>
-          <a href="#showReelBoks">Showreel</a>
-          <a href="#favoritProjekter">Favorit projekter</a>
-          <a href="#fotosBoks">Fotos</a>
+          <a href="#hjem" onclick="closeNav()">Hjem</a>
+          <a href="#showReelBoks" onclick="closeNav()">Showreel</a>
+          <a href="#favoritProjekter" onclick="closeNav()">Favorit projekter</a>
+          <a href="#fotosBoks" onclick="closeNav()">Fotos</a>
           <a href="#hvemErJegBoks">Hvem er jeg?</a>
           <a href="#kontaktDiv">Kontakt</a>
         </div>
