add last draft to amrc website

--- a/OwnProjectsAndTests/hjemmesideTilAmrc/index.html
+++ b/OwnProjectsAndTests/hjemmesideTilAmrc/index.html
@@ -17,8 +17,8 @@
           <a href="#showReelBoks" onclick="closeNav()">Showreel</a>
           <a href="#favoritProjekter" onclick="closeNav()">Favorit projekter</a>
           <a href="#fotosBoks" onclick="closeNav()">Fotos</a>
-          <a href="#hvemErJegBoks">Hvem er jeg?</a>
-          <a href="#kontaktDiv">Kontakt</a>
+          <a href="#hvemErJegBoks" onclick="closeNav()">Hvem er jeg?</a>
+          <a href="#kontaktDiv" onclick="closeNav()">Kontakt</a>
         </div>
     </div>
     <span style="font-size:60px;cursor:pointer" onclick="openNav()" class="menuButton">&#9776;</span>
