try to add mail to to first email on amrc site

--- a/OwnProjectsAndTests/hjemmesideTilAmrc/index.html
+++ b/OwnProjectsAndTests/hjemmesideTilAmrc/index.html
@@ -39,7 +39,7 @@
                     <img src="resources/images/portrait.jpg" alt="Billede af mig" id="portrait1">
                 </div>
             </div>
-            <p>Agneschristens@yahoo.dk</p>
+            <p><a href="mailto:Agneschristens@yahoo.dk">Agneschristens@yahoo.dk</a></p>
         </div>
         <div class="divMedTekstBoks" id="showReelBoks">
             <h3 class="blueHeader" id="showreelH3">Showreel</h3>
