--- a/OwnProjectsAndTests/hjemmesideTilAmrcBackupGamle/index.html
+++ b/OwnProjectsAndTests/hjemmesideTilAmrcBackupGamle/index.html
@@ -9,23 +9,22 @@
     <script src="https://kit.fontawesome.com/e5e3a9297d.js" crossorigin="anonymous"></script>
     <script src="resources/javascript/script.js"></script>
 </head>
-<body>
+<body id="hjem">
     <div id="myNav" class="overlay">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <div class="overlay-content">
           <a href="#hjem" onclick="closeNav()">Hjem</a>
           <a href="#showReelBoks" onclick="closeNav()">Showreel</a>
-          <a href="#favoritProjekterBoks" onclick="closeNav()">Favorit projekter</a>
-          <a href="#fotoBoks" onclick="closeNav()">Fotos</a>
-          <a href="#hvemBoks" onclick="closeNav()">Hvem er jeg?</a>
-          <a href="#kontaktBoks" onclick="closeNav()">Kontakt</a>
+          <a href="#favoritProjekter" onclick="closeNav()">Favorit projekter</a>
+          <a href="#fotosBoks" onclick="closeNav()">Fotos</a>
+          <a href="#hvemErJegBoks" onclick="closeNav()">Hvem er jeg?</a>
+          <a href="#kontaktDiv" onclick="closeNav()">Kontakt</a>
         </div>
     </div>
-    <header>
-        <span style="font-size:60px;cursor:pointer" onclick="openNav()" class="menuButton" id="openButton">&#9776;</span>
-        <span style="font-size:60px;cursor:pointer;display:none" onclick="closeNav()" class="menuButton2" id="closeButton">&times;</span>
-    </header>
+    <span style="font-size:60px;cursor:pointer" onclick="openNav()" class="menuButton">&#9776;</span>
+    <div class="menuDivTest"></div>
     <script src="resources/javascript/menu.js"></script>
-    <div class="divMedTekstBokse" id="hjem">
+    <div class="divMedTekstBokse">
         <div class="divMedTekstBoks" id="title">
             <h1>Skuespiller og Sanger</h1>
             <h2>Agnes Marie Riis Christens</h2>
@@ -42,8 +41,7 @@
             </div>
             <p><a href="mailto:Agneschristens@yahoo.dk">Agneschristens@yahoo.dk</a></p>
         </div>
-        <div class="divMedTekstBoks">
-            <a class="anchor" id="showReelBoks"></a>
+        <div class="divMedTekstBoks" id="showReelBoks">
             <h3 class="blueHeader" id="showreelH3">Showreel</h3>
             <video width="320" height="240" controls>
                 <source src="resources/videos/SampleVideo_1280x720_1mb.mp4" type="video/mp4">
@@ -51,7 +49,6 @@
             </video>
         </div>
         <div class="divMedTekstBoks" id="favoritProjekter">
-            <a class="anchor" id="favoritProjekterBoks"></a>
             <h3 class="blueHeader">Favorit projekter</h3>
             <ul>
                 <div class="projektDiv">
@@ -79,7 +76,6 @@
             <a href="resources/PDF files/pdf-test.pdf" class="button">Download fulde CV klick her</a>
         </div>
             <div class="divMedTekstBoks" id="fotosBoks">
-                <a class="anchor" id="fotoBoks"></a>
                 <h3 class="blueHeader">Fotos</h3>
                 <span id="fotosBoksIndhold">
                     <p>Billeder af mig</p>
@@ -117,7 +113,6 @@
 
         
         <div class="divMedTekstBoks" id="hvemErJegBoks">
-            <a class="anchor" id="hvemBoks"></a>
             <h3 class="blueHeader">Hvem er jeg?</h3>
             <div id="hvemErJegDiv">
             <!-- alternativt skriv om mig. eller noget som mit univers eller noget tilsvarende.-->
@@ -129,7 +124,6 @@
             </div>
         </div>
         <div class="divMedTekstBoks" id="kontaktDiv">
-            <a class="anchor" id="kontaktBoks"></a>
             <h3 id="blackHeader">Kontakt</h3>
             <div>
                 <div>
