remove b projects from website

--- a/resources/nestedPages/projectsPage/index.html
+++ b/resources/nestedPages/projectsPage/index.html
@@ -88,20 +88,21 @@
           <p>This can be viewed on desktop only</p>
         </a>
       </div>
-      <!-- brians garage section -->
+      <!-- 
+      garage section
       <div class="briansGarage">
         <a href="https://j-raunstrup.github.io/CodeCademy/full-stack-engineer/flexbox-business-site-starting">
           <h3>(Parody) Company site: brians garage</h3>
           <p>This can be viewed on desktop and mobile</p>
         </a>
       </div>
-      <!-- brians gym section -->
+      gym section 
       <div class="briansGym">
         <a href="https://j-raunstrup.github.io/CodeCademy/full-stack-engineer/responsive-club-starting/starting">
           <h3>(Parody) Club site: brians gym</h3>
           <p>This can be viewed on desktop and mobile</p>
         </a>
-      </div>
+      </div> -->
       <!-- number guesser site section -->
       <div class="numberGuesserSite">
         <a class="paperBox" href="https://j-raunstrup.github.io/CodeCademy/full-stack-engineer/number-guesser-starting">
